- Tracker server ignition report WIP
