# src/main/java/org/traccar/api/resource/ReportResource.java
@@ -17,6 +17,7 @@
 package org.traccar.api.resource;
 
 import org.traccar.api.SimpleObjectResource;
+import org.traccar.helper.DateUtil;
 import org.traccar.helper.LogAction;
 import org.traccar.model.Event;
 import org.traccar.model.Position;
@@ -25,6 +26,7 @@ import org.traccar.model.UserRestrictions;
 import org.traccar.reports.CombinedReportProvider;
 import org.traccar.reports.DevicesReportProvider;
 import org.traccar.reports.EventsReportProvider;
+import org.traccar.reports.IgnitionReportProvider;
 import org.traccar.reports.RouteReportProvider;
 import org.traccar.reports.StopsReportProvider;
 import org.traccar.reports.SummaryReportProvider;
@@ -32,6 +34,7 @@ import org.traccar.reports.TripsReportProvider;
 import org.traccar.reports.common.ReportExecutor;
 import org.traccar.reports.common.ReportMailer;
 import org.traccar.reports.model.CombinedReportItem;
+import org.traccar.reports.model.IgnitionReportItem;
 import org.traccar.reports.model.StopReportItem;
 import org.traccar.reports.model.SummaryReportItem;
 import org.traccar.reports.model.TripReportItem;
@@ -74,6 +77,9 @@ public class ReportResource extends SimpleObjectResource<Report> {
 
     @Inject
     private SummaryReportProvider summaryReportProvider;
+
+    @Inject
+    private IgnitionReportProvider ignitionReportProvider;
 
     @Inject
     private TripsReportProvider tripsReportProvider;
@@ -332,8 +338,34 @@ public class ReportResource extends SimpleObjectResource<Report> {
     public Response getDevicesExcel(
             @PathParam("type") String type) throws StorageException {
         permissionsService.checkRestriction(getUserId(), UserRestrictions::getDisableReports);
-        return executeReport(getUserId(), type.equals("mail"), stream -> {
-            devicesReportProvider.getExcel(stream, getUserId());
+        return executeReport(getUserId(), type.equals("mail"), stream -> devicesReportProvider.getExcel(stream, getUserId()));
+    }
+
+
+    @Path("ignition")
+    @GET
+    public Collection<IgnitionReportItem> getIgnition(
+            @QueryParam("deviceId") final List<Long> deviceIds, @QueryParam("groupId") final List<Long> groupIds,
+            @QueryParam("from") String from, @QueryParam("to") String to) throws Exception {
+        return ignitionReportProvider.getIgnitionReportItems(deviceIds, getUserId(), groupIds, DateUtil.parseDate(from), DateUtil.parseDate(to));
+    }
+
+    @Path("ignition/{type:xlsx|mail}")
+    @GET
+    @Produces(EXCEL)
+    public Response getIgnitionExcel(
+            @QueryParam("deviceId") final List<Long> deviceIds,
+            @QueryParam("groupId") final List<Long> groupIds,
+            @QueryParam("from") Date from,
+            @QueryParam("to") Date to,
+            @QueryParam("mail") boolean mail) {
+        return executeReport(getUserId(), mail, stream -> {
+            try {
+                ignitionReportProvider.getExcel(stream, getUserId(), deviceIds, groupIds,
+                        from, to);
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
         });
     }
 
